--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
-    "dev": "ts-node-dev --respawn --ignore-watch node_modules src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node dist/app.js",
+    "dev": "NODE_ENV=development ts-node-dev --respawn --ignore-watch node_modules src/app.ts",
+    "test": "NODE_ENV=test jest --verbose --silent --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -32,10 +32,12 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
@@ -50,6 +52,7 @@
     "morgan": "^1.10.0",
     "prettier": "^3.2.5",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript-eslint": "^7.8.0"
   }
